Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/Diagnostics/6860795/T6860795.out
T6860795.java:10:27: compiler.err.already.defined: kindname.variable, x, kindname.method, foo
1 error
